<resources>
    <string name="app_name">FindYourHandyman</string>

    /*Icons*/
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_close">&#xf00d;</string>
    <string name="icon_options">&#xf0ad;</string>
    <string name="icon_create">&#xf040;</string>
    <string name="icon_logout">&#xf060;</string>
    <string name="icon_list_jobs">&#xf0cb;</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_task">&#xf0ae;></string>
    <string name="empty_text">No jobs found</string>
    <string name="loading_jobs">Loading jobs...</string>

    <string name="job_description">Job Description</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels_client">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_view_my_jobs</item>
        <item>@string/nav_item_create_jobs</item>
        <item>@string/nav_item_manage_proposals</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string-array name="nav_drawer_labels_contractor">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_find_job</item>
        <item>@string/nav_item_view_my_appointments</item>
        <item>string/nav_item_manage_proposals</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawe Close</string>
    <string name="tittle_home">Home</string>
    <string name="title_view_my_jobs">View My Jobs</string>
    <string name="nav_item_create_jobs">Create Job</string>
    <string name="action_settings">...</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_view_my_jobs">View My Jobs</string>
    <string name="nav_item_manage_proposals">Manage Proposals</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_find_job">Find Jobs</string>
    <string name="nav_item_view_my_appointments">View My Appointments</string>
    <string name="price_per_hour">Price per hour:</string>
    <string name="duration">Duration:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>
    <string name="response_message">Response Message</string>
    <string name="from">From:</string>
    <string name="loading_tasks">Loading tasks...</string>
    <string name="edit_task">Edit task</string>
    <string name="close_task">Close Task</string>
    <string name="complete_task">Complete task</string>
    <string name="edit_job">Edit Job</string>
    <string name="close_job">Close Job</string>
    <string name="view_tasks">View Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="task_description">Task Description</string>


</resources>