<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="180dp">


        <TextView
            android:id="@+id/job_name_label"
            style="@style/sectionHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/job_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/from_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="10dip"
                android:paddingStart="5dip"
                android:text="@string/from"
                android:textColor="@color/accent" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="start"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="2dip"
                android:paddingEnd="5dip"
                android:paddingStart="10dip"
                android:textColor="@color/primary_text_color" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="180dp">

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="5dip"
                android:text="@string/price_per_hour"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="10dip"
                android:textColor="@color/primary_text_color" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="180dp">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="5dip"
                android:text="@string/date"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="10dip"
                android:textColor="@color/primary_text_color" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="180dp">

            <TextView
                android:id="@+id/duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="5dip"
                android:text="@string/duration"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="10dip"
                android:textColor="@color/primary_text_color" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="180dp">

            <TextView
                android:id="@+id/message_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="5dip"
                android:text="@string/message"
                android:textColor="@color/accent" />

            <TextView
                android:id="@+id/proposal_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingEnd="5dip"
                android:paddingStart="10dip"
                android:textColor="@color/primary_text_color" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="11dp"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/response_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/response_message"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="10"
                android:minLines="4"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/accept_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:scaleType="fitXY"
                android:src="@drawable/ic_accept" />

            <ImageView
                android:id="@+id/message_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:scaleType="fitXY"
                android:src="@drawable/ic_message" />

            <ImageView
                android:id="@+id/reject_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:scaleType="fitXY"
                android:src="@drawable/ic_reject" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>